Squashed commit of the following:
commit 6b0bf73ace2134f626c14c7206bdc92d2fa3fd3f
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Mon Nov 4 09:58:18 2019 +0100

    Fix for users with undefined username

commit adb3018ac88a5e9de843a309cc2548c2aec25502
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Wed Oct 30 19:46:11 2019 +0100

    Fixed Apartment Parser

commit d281c717aad99b8e1f6e69ef0735528027fc4d56
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Wed Oct 30 17:31:23 2019 +0100

    Added telegram bot as a NotificationService

commit c8d955caea8efb559e1a9316782b9f867bb4ed8e
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Wed Oct 30 15:45:16 2019 +0100

    Introduce NotificationManager to be able to support a few Notification services. Introduce possibility to subscribe and unsubscribe to notifications. Introduce possibility to enable and disable notification services (incomplete)

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Notification services -->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.4.0.1</version>
+        </dependency>
         <dependency>
             <groupId>com.sendgrid</groupId>
             <artifactId>sendgrid-java</artifactId>
