Squashed commit of the following:
commit a1cac381edd61c94091c1ffd31d029083c520944
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Mon Nov 4 17:18:41 2019 +0100

    Turned on Telegram notifications for prod

commit 7edfa2db6d1c2f8afb3bc1f12c9e00b0d292de8e
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Mon Nov 4 17:17:36 2019 +0100

    Introduce search by primary key and scan filter by timestamp

commit d4998f92d9741ad6d41e73b8a450f23d5de5888d
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Mon Nov 4 14:37:44 2019 +0100

    Minor changes log

commit 8ef2764f957bfe805960eaffddbf1175fb4b4faf
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Mon Nov 4 14:32:52 2019 +0100

    Added DynamoDb support instead of in-memory collection

commit e5738b2bb95a8987d08ceb1f3b458157f3c56540
Author: Kotova <ekaterina.kotova@zooplus.com>
Date:   Mon Nov 4 11:10:27 2019 +0100

    Added switch for all notification services

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.658</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>1.11.658</version>
+        </dependency>
+        <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.12.1</version>
