--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.cdeneuve.realestate</groupId>
     <artifactId>realestate-checker</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
+    <scm>
+        <connection>scm:git:git://github.com/cdene/realestate-checker.git</connection>
+        <developerConnection>scm:git:git@github.com/cdene/realestate-checker.git</developerConnection>
+    </scm>
+
     <build>
         <plugins>
             <plugin>
@@ -23,6 +30,11 @@
                 <configuration>
                     <mainClass>com.cdeneuve.realestate.RealEstateApp</mainClass>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
             </plugin>
         </plugins>
     </build>
@@ -90,8 +102,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
 
