--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 sendgrid.env
 /target
 
+.classpath
+.settings
+
+### Java template
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+### virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+### Maven template
+target/
+
+### JetBrains template
+.idea
+*.iml
+
+### Mac files
+.DS_Store
