--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 
     <scm>
-        <connection>scm:git:git://github.com/cdene/realestate-checker.git</connection>
+        <connection>scm:git:https//github.com/cdene/realestate-checker.git</connection>
         <developerConnection>scm:git:git@github.com/cdene/realestate-checker.git</developerConnection>
       <tag>realestate-checker-1.1.0</tag>
   </scm>
