--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 
 
     <scm>
-        <connection>scm:git:git://github.com/cdene/realestate-checker.git</connection>
-        <developerConnection>scm:git:git@github.com/cdene/realestate-checker.git</developerConnection>
+        <connection>scm:git:https://github.com/cdene/realestate-checker.git</connection>
+        <developerConnection>scm:git:https://github.com/cdene/realestate-checker.git</developerConnection>
       <tag>realestate-checker-1.1.0</tag>
   </scm>
 
