--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 
     <groupId>com.cdeneuve.realestate</groupId>
     <artifactId>realestate-checker</artifactId>
+    <packaging>jar</packaging>
     <version>1.1.3-SNAPSHOT</version>
 
 
