--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
     <groupId>com.cdeneuve.realestate</groupId>
     <artifactId>realestate-checker</artifactId>
     <packaging>jar</packaging>
-    <version>1.1.3</version>
+    <version>1.1.4-SNAPSHOT</version>
 
 
     <scm>
         <connection>scm:git:https://github.com/cdene/realestate-checker.git</connection>
         <developerConnection>scm:git:https://github.com/cdene/realestate-checker.git</developerConnection>
-        <tag>realestate-checker-1.1.3</tag>
+        <tag>realestate-checker-1.1.0</tag>
     </scm>
 
     <build>
