--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.9.RELEASE</version>
+        <version>2.2.7.RELEASE</version>
     </parent>
     <properties>
         <aws.sdk.version>1.11.658</aws.sdk.version>
@@ -105,9 +105,9 @@
     <build>
         <extensions>
             <extension>
-                <groupId>com.github.platform-team</groupId>
+                <groupId>com.github.ottogroupsolutionprovider</groupId>
                 <artifactId>aws-maven</artifactId>
-                <version>6.0.0</version>
+                <version>6.0.1</version>
             </extension>
         </extensions>
         <plugins>
@@ -129,7 +129,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>3.0.0-M1</version>
                 <configuration>
                     <tagNameFormat>@{project.version}</tagNameFormat>
                 </configuration>
